--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ MONGODB_URL = mongodb+srv://yugpatel:yugpatel@cluster0.ix44x.mongodb.net/myFirst
 
 ACCESS_TOKEN_SECRET = !p:`%:A^dKrY[T7QM.s2zH.8c>AK;FaE^A7t~q{krF;v*CcCn)
 REFRESH_TOKEN_SECRET = P=L;?F\Q"W~-abMyNZD,mBU]X]z&#kebSK""s\<>cg8?-t<zy9(]:h_(.5A<E5K)erAf&rZT$LgZj+kEf97g^2Z+5fsAD-#Ssf?W
+
+
+// Uploading image on cloudinary
+CLOUD_API_KEY = 969611687528574
+CLOUD_API_SECRET = eho6oqRayUm_ecWnD_Zzs1f10YU
+CLOUD_NAME = yug-store
